force-app/main/default/objects/OrderItem/fields/Bonus_Code__c.field-meta.xml
<CustomField>
    <fullName>Bonus_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bonus Code</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Bonus_Code__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Bonus_Code__c</referenceTo>
    <relationshipLabel>Order Products</relationshipLabel>
    <relationshipName>Order_Products</relationshipName>
    <type>Lookup</type>
</CustomField>