force-app/main/default/objects/OrderItem/fields/BonusCodeHidden__c.field-meta.xml
<CustomField>
    <fullName>BonusCodeHidden__c</fullName>
    <label>BonusCodeHidden</label>
    <length>200</length>
    <type>Text</type>
</CustomField>