force-app/main/default/objects/OrderItem/fields/FOC_Reason__c.field-meta.xml
<CustomField>
    <fullName>FOC_Reason__c</fullName>
    <label>FOC Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Promotion/Bonus</fullName>
            </value>
            <value>
                <fullName>Course Product</fullName>
            </value>
            <value>
                <fullName>Demo/Sample</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
            </value>
            <value>
                <fullName>Complaint</fullName>
            </value>
            <value>
                <fullName>Replacement</fullName>
            </value>
            <value>
                <fullName>Research/Donation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>